fix z-index

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,7 @@ body {
     font-family: sans-serif;
 }
 #map {
+    z-index: 1;
     width: 100dvw;
     height: 100dvh;
 }
